# sprinter

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  justfile  rustfmt.toml  tarpaulin.toml
.cursor/rules/: sprinter-rust.mdc  sprinter-testing.mdc  sprinter.mdc
.cursor/skills/sprinter-workflow/: SKILL.md
.github/workflows/: deploy-crates.yml  release-finalize.yml  release-prepare.yml
example/: basic.rs  deduping.rs
misc/: old.rs
src/: lib.rs
