[package]
name = "sprinter"
description = "Run parallel queued tasks"
version = "0.2.1"
edition = "2021"
authors = ["Simone Sanfratello <simone.sanfra@gmail.com>"]
license = "MIT"

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
thiserror = "2.0.9"

[dev-dependencies]
tokio-test = "0.4.4"

[[example]]
name = "basic"
path = "example/basic.rs"
