[package]
name = "sprinter"
description = "Run parallel queued tasks"
version = "0.3.1"
edition = "2021"
authors = ["Simone Sanfratello <simone.sanfra@gmail.com>"]
license = "MIT"
repository = "https://github.com/simone-sanfratello/sprinter"

[dependencies]
tokio = { version = "1.51.0", features = ["full"] }
thiserror = "2.0.18"

[dev-dependencies]
tokio-test = "0.4.5"

[[example]]
name = "basic"
path = "example/basic.rs"

[[example]]
name = "deduping"
path = "example/deduping.rs"
